# see-baatle

./: .gitignore  C&R.bat  CMakeLists.txt  Makefile  README.md  See.files  arrange.c  arrange.h  header.h  main.c  run.sh  ships.c  ships.h  shoot.c  shoot.h  table.c  table.h  test.c  tmp.txt
Source/: arrange.c  arrange.h  arrangingShips.c  curses.h  endGame.c  endGame.h  header.h  includeCurses.h  loginMenu.c  loginMenu.h  main.c  mainMenu.c  mainMenu.h  menu.c  menu.h  network.c  network.h  ships.c  ships.h  shoot.c  shoot.h  shootWindows.c  shootWindows.h  shootingGameLoop.c  shootingGameLoop.h  table.c  table.h
cmake/Modules/: Findpdcurses.cmake
